--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 .main-header {
   background-color: #fcfcfc;
+  font-family: Roboto, sans-serif;
 }
 
 .container {
@@ -26,7 +27,6 @@
 
 .main-menu__link {
   display: inline-block;
-  font-family: Roboto, sans-serif;
   padding: 28px 44px;
   color: #16a085;
   font-size: 18px;
@@ -42,6 +42,7 @@
 .section-body {
   background-color: #f5f6f7;
   padding-bottom: 86px;
+  font-family: Roboto, sans-serif;
 }
 
 .body-img {
@@ -53,7 +54,6 @@
 .body-header {
   text-align: center;
   margin: 56px 0 0;
-  font-family: Roboto, sans-serif;
   color: #373737;
   text-transform: uppercase;
   font-size: 22px;
@@ -62,8 +62,7 @@
 }
 
 .body-text {
-  margin: 34px auto;
-  font-family: Roboto, sans-serif;
+  margin: 34px 93px 34px 93px;
   color: #373737;
   font-size: 16px;
   font-weight: 900;
@@ -73,7 +72,6 @@
 
 .btn {
   display: inline-block;
-  font-family: Roboto, sans-serif;
   border-radius: 3px;
   background-color: #16a085;
   color: #ffffff;
@@ -122,7 +120,7 @@
   color: #16a085;
 }
 
-.copyright {
+.footer-copyright {
   float: right;
   margin-top: 45px;
   margin-right: 67px;
